--- a/static/index.css
+++ b/static/index.css
@@ -41,7 +41,7 @@ html, body {
 }
 
 .intro__header {
-    font-size: 10vw;
+    font-size: 32px;
     line-height: 1.1em;
     font-weight: bolder;
     margin-bottom: 16px;
